# tracker-tui

./: .gitignore  DECISIONS.md  DOGFOOD.md  Makefile  README.md  demo.tape  pyproject.toml  tracker.py
.github/workflows/: ci.yml
screenshots/: README.md  gameplay.tcell  hero.tcell
screenshots/candidates/: README.md
tests/: perf.py  qa.py
tracker_tui/: __init__.py  app.py  demo.py  keymap.py  mod_io.py  screens.py  song.py  synth.py  tiles.py  tui.tcss
